--- a/deployments/prod/taiko.yaml
+++ b/deployments/prod/taiko.yaml
@@ -9,13 +9,17 @@ config:
     vault: "0x3c0a405E914337139992625D5100Ea141a9C4d11"
   explorer_base_url: https://taikoscan.io/
   file_name: taiko
+  file_path: prod/taiko.yaml
+  is_testnet: False
   layer: 2
   logo_url: https://i.ibb.co/F7pRXd1/Tko-256x256.png
-  native_currency_coingecko_id: taiko
   native_currency_symbol: ETH
   network_name: taiko
-  platform_coingecko_id: taiko
   public_rpc_url: https://rpc.ankr.com/taiko
+  reference_token_addresses:
+    usdc: "0x07d83526730c7438048D55A4fc0b850e2aaB6f0b"
+    usdt: "0x2DEF195713CF4a606B49D07E520e22C17899a736"
+    weth: "0xA51894664A773981C6C112C43ce576f315d5b1B6"
   rollup_type: _
   wrapped_native_token: "0xA51894664A773981C6C112C43ce576f315d5b1B6"
 contracts:
