check deployment file exists in get_deployment_obj

--- a/settings/chains/devnet/arb_sepolia.yaml
+++ b/settings/chains/devnet/arb_sepolia.yaml
@@ -9,7 +9,14 @@ explorer_base_url: https://sepolia.arbiscan.io/
 # Not related to development, for further integrations
 layer: 2
 native_currency_symbol: ETH
-native_currency_coingecko_id: ethereum
-platform_coingecko_id: ethereum
+logo_url: https://raw.githubusercontent.com/curvefi/curve-assets/refs/heads/main/chains/arbitrum-sepolia.png
+file_name: arbitrum-sepolia
+file_path: devnet/arb_sepolia.yaml
+is_testnet: True
 public_rpc_url: https://sepolia-rollup.arbitrum.io/rpc
 wrapped_native_token: "0x980B62Da83eFf3D4576C647993b0c1D7faf17c73"
+reference_token_addresses:
+  usdc: ""
+  usdt: ""
+  weth: ""
+multicall2: ""
