--- a/deployments/devnet/neon.yaml
+++ b/deployments/devnet/neon.yaml
@@ -8,13 +8,13 @@ config:
     parameter_admin: "0xAB1c34b53F12980a4fa9043B70c864CEE6891c0C"
     vault: "0xAB1c34b53F12980a4fa9043B70c864CEE6891c0C"
   explorer_base_url: https://devnet.neonscan.org
-  file_name: neondevnet
-  file_path: devnet/neondevnet.yaml
+  file_name: neon
+  file_path: devnet/neon.yaml
   is_testnet: True
   layer: 1
   logo_url: https://i.ibb.co/pz7KQ47/vq-If-Bf-I0-400x400.jpg
   native_currency_symbol: NEON
-  network_name: neondevnet
+  network_name: neon
   public_rpc_url: https://devnet.neonevm.org
   rollup_type: _
   wrapped_native_token: "0x11adC2d986E334137b9ad0a0F290771F31e9517F"
