--- a/deployments/examples/example_op_stack_DEBUG.yaml
+++ b/deployments/examples/example_op_stack_DEBUG.yaml
@@ -1,27 +1,26 @@
 config:
   chain_id: 10
   dao:
-    crv: '0x0994206dfE8De6Ec6920FF4D779B0d950605Fb53'
-    crvusd: '0xC52D7F23a2e460248Db6eE192Cb23dD12bDDCbf6'
-    emergency_admin: '0x928e3bCf7274ABf5450a28ff168C07fa2B9A28f0'
-    ownership_admin: '0xD6e90d0441B1362f5C062950F77Cf4f2068fa574'
-    parameter_admin: '0x78F10Ce28FdD3e595F15bFce2D0D83B00B314cF4'
-    vault: '0xB822167C7EefF0B53DcfDEE2D8fe73dEDB25505b'
+    crv: "0x0994206dfE8De6Ec6920FF4D779B0d950605Fb53"
+    crvusd: "0xC52D7F23a2e460248Db6eE192Cb23dD12bDDCbf6"
+    emergency_admin: "0x928e3bCf7274ABf5450a28ff168C07fa2B9A28f0"
+    ownership_admin: "0xD6e90d0441B1362f5C062950F77Cf4f2068fa574"
+    parameter_admin: "0x78F10Ce28FdD3e595F15bFce2D0D83B00B314cF4"
+    vault: "0xB822167C7EefF0B53DcfDEE2D8fe73dEDB25505b"
   explorer_base_url: https://optimistic.etherscan.io
   file_name: example_op_stack
   layer: 2
   native_currency_coingecko_id: ethereum
   native_currency_symbol: ETH
   network_name: Optimism Local
-  platform_coingecko_id: ethereum
   public_rpc_url: https://optimism.llamarpc.com
   rollup_type: op_stack
-  wrapped_native_token: '0x4200000000000000000000000000000000000006'
+  wrapped_native_token: "0x4200000000000000000000000000000000000006"
 contracts:
   amm:
     stableswap:
       factory:
-        address: '0x8C3472B89e6D095201334A1d4Bbb5Ea8227A833C'
+        address: "0x8C3472B89e6D095201334A1d4Bbb5Ea8227A833C"
         compiler_settings:
           compiler_version: 0.3.10
           evm_version: shanghai
@@ -33,7 +32,7 @@ contracts:
         deployment_timestamp: 1730118729
         deployment_type: normal
       implementation:
-        address: '0xE9A18199203e2a547B2E9CB335a9F3A3c14A77f7'
+        address: "0xE9A18199203e2a547B2E9CB335a9F3A3c14A77f7"
         compiler_settings:
           compiler_version: 0.3.10
           evm_version: shanghai
@@ -45,7 +44,7 @@ contracts:
         deployment_timestamp: 1730118727
         deployment_type: blueprint
       math:
-        address: '0x98dBBdba1A3f3e0b41dACf0B340ff5C2250A961A'
+        address: "0x98dBBdba1A3f3e0b41dACf0B340ff5C2250A961A"
         compiler_settings:
           compiler_version: 0.3.10
           evm_version: shanghai
@@ -57,7 +56,7 @@ contracts:
         deployment_timestamp: 1730118726
         deployment_type: normal
       meta_implementation:
-        address: '0xad9485a04927970E8448eB0DA2D2035FF22Ec546'
+        address: "0xad9485a04927970E8448eB0DA2D2035FF22Ec546"
         compiler_settings:
           compiler_version: 0.3.10
           evm_version: paris
@@ -69,7 +68,7 @@ contracts:
         deployment_timestamp: 1730118727
         deployment_type: blueprint
       views:
-        address: '0x22bDac327bD8a73244769EB5CF7bf57552DDcBcB'
+        address: "0x22bDac327bD8a73244769EB5CF7bf57552DDcBcB"
         compiler_settings:
           compiler_version: 0.3.10
           evm_version: paris
@@ -82,7 +81,7 @@ contracts:
         deployment_type: normal
     tricryptoswap:
       factory:
-        address: '0xc321fb297739feBA3aB49987C758AD6463661B24'
+        address: "0xc321fb297739feBA3aB49987C758AD6463661B24"
         compiler_settings:
           compiler_version: 0.3.10
           evm_version: paris
@@ -94,7 +93,7 @@ contracts:
         deployment_timestamp: 1730118731
         deployment_type: normal
       implementation:
-        address: '0x5169928944522977ee7F9968b9EaF6a5917b5B1F'
+        address: "0x5169928944522977ee7F9968b9EaF6a5917b5B1F"
         compiler_settings:
           compiler_version: 0.3.10
           evm_version: paris
@@ -106,7 +105,7 @@ contracts:
         deployment_timestamp: 1730118730
         deployment_type: blueprint
       math:
-        address: '0xB372E22cC331980f8D5dbD955789e67420E0a53f'
+        address: "0xB372E22cC331980f8D5dbD955789e67420E0a53f"
         compiler_settings:
           compiler_version: 0.3.10
           evm_version: paris
@@ -118,7 +117,7 @@ contracts:
         deployment_timestamp: 1730118729
         deployment_type: normal
       views:
-        address: '0xBae83bdb6FF2af4f330DD24D56344193DDF1A9F3'
+        address: "0xBae83bdb6FF2af4f330DD24D56344193DDF1A9F3"
         compiler_settings:
           compiler_version: 0.3.10
           evm_version: paris
@@ -131,7 +130,7 @@ contracts:
         deployment_type: normal
     twocryptoswap:
       factory:
-        address: '0x80183503F14FCe9fdd36E8461d0b48c39593D2F5'
+        address: "0x80183503F14FCe9fdd36E8461d0b48c39593D2F5"
         compiler_settings:
           compiler_version: 0.3.10
           evm_version: paris
@@ -143,7 +142,7 @@ contracts:
         deployment_timestamp: 1730118733
         deployment_type: normal
       implementation:
-        address: '0xaCFbC7865EC1144773ba71C9E8b06dc945edd26B'
+        address: "0xaCFbC7865EC1144773ba71C9E8b06dc945edd26B"
         compiler_settings:
           compiler_version: 0.3.10
           evm_version: paris
@@ -155,7 +154,7 @@ contracts:
         deployment_timestamp: 1730118732
         deployment_type: blueprint
       math:
-        address: '0x3980F1806b55e38dA48390ffFbf2b2FEFB329586'
+        address: "0x3980F1806b55e38dA48390ffFbf2b2FEFB329586"
         compiler_settings:
           compiler_version: 0.3.10
           evm_version: paris
@@ -167,7 +166,7 @@ contracts:
         deployment_timestamp: 1730118731
         deployment_type: normal
       views:
-        address: '0x42BfAf1D3b0b40A6D8534376feF76DAE08d7Cb5A'
+        address: "0x42BfAf1D3b0b40A6D8534376feF76DAE08d7Cb5A"
         compiler_settings:
           compiler_version: 0.3.10
           evm_version: paris
@@ -181,7 +180,7 @@ contracts:
   gauge:
     child_gauge:
       factory:
-        address: '0xDa5e407C7b1887E7f76c920B70614e73feA0DDA1'
+        address: "0xDa5e407C7b1887E7f76c920B70614e73feA0DDA1"
         compiler_settings:
           compiler_version: 0.3.10
           evm_version: paris
@@ -193,7 +192,7 @@ contracts:
         deployment_timestamp: 1730118725
         deployment_type: normal
       implementation:
-        address: '0x73f2D414DCE6AAbB3672bd5BF732A2C87cBff751'
+        address: "0x73f2D414DCE6AAbB3672bd5BF732A2C87cBff751"
         compiler_settings:
           compiler_version: 0.3.10
           evm_version: null
@@ -206,7 +205,7 @@ contracts:
         deployment_type: normal
   governance:
     agent:
-      address: '0x0880cf17Bd263d3d3a5c09D2D86cCecA3CcbD97c'
+      address: "0x0880cf17Bd263d3d3a5c09D2D86cCecA3CcbD97c"
       compiler_settings:
         compiler_version: 0.3.10
         evm_version: null
@@ -219,7 +218,7 @@ contracts:
       deployment_type: blueprint
     relayer:
       op_stack:
-        address: '0x2cb6bCe32aeF4eD506382896e702DE7Ff109D9E9'
+        address: "0x2cb6bCe32aeF4eD506382896e702DE7Ff109D9E9"
         compiler_settings:
           compiler_version: 0.3.10
           evm_version: null
@@ -231,7 +230,7 @@ contracts:
         deployment_timestamp: 1730118724
         deployment_type: normal
     vault:
-      address: '0xB822167C7EefF0B53DcfDEE2D8fe73dEDB25505b'
+      address: "0xB822167C7EefF0B53DcfDEE2D8fe73dEDB25505b"
       compiler_settings:
         compiler_version: 0.3.10
         evm_version: null
@@ -244,7 +243,7 @@ contracts:
       deployment_type: normal
   helpers:
     deposit_and_stake_zap:
-      address: '0xc5c20213D4b52B092900254aFe21101764969F35'
+      address: "0xc5c20213D4b52B092900254aFe21101764969F35"
       compiler_settings:
         compiler_version: 0.3.10
         evm_version: paris
@@ -256,7 +255,7 @@ contracts:
       deployment_timestamp: 1730118733
       deployment_type: normal
     rate_provider:
-      address: '0xAD5C414cCf50D17AF7117Ab87729364bd23B83FE'
+      address: "0xAD5C414cCf50D17AF7117Ab87729364bd23B83FE"
       compiler_settings:
         compiler_version: 0.3.10
         evm_version: paris
@@ -268,19 +267,19 @@ contracts:
       deployment_timestamp: 1730118734
       deployment_type: normal
     router:
-      address: '0x864C57A226c39F4cfC30A589B9198D583Ad6971a'
+      address: "0x864C57A226c39F4cfC30A589B9198D583Ad6971a"
       compiler_settings:
         compiler_version: 0.3.10
         evm_version: paris
         optimisation_level: GAS
-      constructor_args_encoded: '0000000000000000000000004200000000000000000000000000000000000006'
+      constructor_args_encoded: "0000000000000000000000004200000000000000000000000000000000000006"
       contract_github_url: https://github.com/curvefi/curve-lite/blob/0f3143402f74b3e43f8287e65130b3ce32aa89ac/contracts/helpers/router/router_v_110.vy
       contract_path: /contracts/helpers/router/router_v_110.vy
       contract_version: 1.1.0
       deployment_timestamp: 1730118726
       deployment_type: normal
     stable_swap_meta_zap:
-      address: '0x4Bc555E718981beBF1d6d31abD66A10093f1A0AF'
+      address: "0x4Bc555E718981beBF1d6d31abD66A10093f1A0AF"
       compiler_settings:
         compiler_version: 0.3.10
         evm_version: paris
@@ -293,7 +292,7 @@ contracts:
       deployment_type: normal
   registries:
     address_provider:
-      address: '0x326B089670ba0E6700B1821c34d7b4Afddb11d1b'
+      address: "0x326B089670ba0E6700B1821c34d7b4Afddb11d1b"
       compiler_settings:
         compiler_version: 0.3.10
         evm_version: paris
@@ -305,7 +304,7 @@ contracts:
       deployment_timestamp: 1730118725
       deployment_type: normal
     metaregistry:
-      address: '0x261B5BAEBC6A3DdA3b91ADa3778AD3a3503bFD18'
+      address: "0x261B5BAEBC6A3DdA3b91ADa3778AD3a3503bFD18"
       compiler_settings:
         compiler_version: 0.3.10
         evm_version: paris
@@ -318,7 +317,7 @@ contracts:
       deployment_type: normal
       registry_handlers:
         stableswap:
-          address: '0x9814026a42C413f193c544CFFa9Cb6B74d369CA4'
+          address: "0x9814026a42C413f193c544CFFa9Cb6B74d369CA4"
           compiler_settings:
             compiler_version: 0.3.10
             evm_version: paris
@@ -330,7 +329,7 @@ contracts:
           deployment_timestamp: 1730118734
           deployment_type: normal
         tricryptoswap:
-          address: '0x1A82e62a6cCb405fEbC1E019d8B45Ef5B4247204'
+          address: "0x1A82e62a6cCb405fEbC1E019d8B45Ef5B4247204"
           compiler_settings:
             compiler_version: 0.3.10
             evm_version: paris
@@ -342,7 +341,7 @@ contracts:
           deployment_timestamp: 1730118735
           deployment_type: normal
         twocryptoswap:
-          address: '0x06e3AbE34C8C4660cC7275D16373b747361dFe2F'
+          address: "0x06e3AbE34C8C4660cC7275D16373b747361dFe2F"
           compiler_settings:
             compiler_version: 0.3.10
             evm_version: paris
