--- a/deployments/prod/sonic.yaml
+++ b/deployments/prod/sonic.yaml
@@ -15,7 +15,7 @@ config:
   logo_url: https://raw.githubusercontent.com/0xsoniclabs/mediakit/refs/heads/main/200xS_token_Black-BG.png
   multicall2: null
   multicall3: '0xcA11bde05977b3631167028862bE2a173976CA11'
-  native_currency_coingecko_id: sonic
+  native_currency_coingecko_id: sonic-3
   native_currency_symbol: S
   network_name: sonic
   public_rpc_url: https://rpc.soniclabs.com
