--- a/settings/chains/devnet/tac.yaml
+++ b/settings/chains/devnet/tac.yaml
@@ -9,12 +9,14 @@ dao:
   parameter_admin: "0xAB1c34b53F12980a4fa9043B70c864CEE6891c0C"
   vault: "0xAB1c34b53F12980a4fa9043B70c864CEE6891c0C"
 explorer_base_url: https://turin.explorer.tac.build/
+is_testnet: true
 
 # Not related to development, for further integrations
 layer: 1
 logo_url: https://tacpreloader.s3.us-east-1.amazonaws.com/2024-12-11+12.54.58.jpg
 native_currency_symbol: TAC
-public_rpc_url: https://tacpreloader.s3.us-east-1.amazonaws.com/tactestnet.svg
+native_currency_coingecko_id: TAC
+public_rpc_url: https://turin.rpc.tac.build
 wrapped_native_token: "0x07840B012d84095397Fd251Ea619cee6F866bC39"
 reference_token_addresses:
   usdt: "0xa4014D04BF612709A2657E1d6f21DF6b02B55d79"
