--- a/deployments/prod/hyperliquid.yaml
+++ b/deployments/prod/hyperliquid.yaml
@@ -15,7 +15,7 @@ config:
   logo_url: https://i.postimg.cc/9Q5S5B3p/hyperliquid.png
   multicall2: null
   multicall3: '0xcA11bde05977b3631167028862bE2a173976CA11'
-  native_currency_coingecko_id: hype
+  native_currency_coingecko_id: hyperliquid
   native_currency_symbol: HYPE
   network_name: hyperliquid
   public_rpc_url: https://rpc.hyperliquid.xyz/evm
