--- a/deployments/devnet/expchain.yaml
+++ b/deployments/devnet/expchain.yaml
@@ -7,7 +7,7 @@ config:
     ownership_admin: '0x0000000000000000000000000000000000000000'
     parameter_admin: '0x0000000000000000000000000000000000000000'
     vault: '0x0000000000000000000000000000000000000000'
-  explorer_base_url: https://blockscout-testnet.expchain.ai/
+  explorer_base_url: https://blockscout2-testnet.expchain.ai/
   file_name: expchain
   file_path: devnet/expchain.yaml
   is_testnet: true
@@ -18,13 +18,13 @@ config:
   native_currency_coingecko_id: polyhedra-network
   native_currency_symbol: tZKJ
   network_name: EXPchain
-  public_rpc_url: https://rpc0-testnet.expchain.ai
+  public_rpc_url: https://rpc2-testnet.expchain.ai/
   reference_token_addresses:
     usdc: '0x0000000000000000000000000000000000000000'
     usdt: '0x0000000000000000000000000000000000000000'
     weth: '0x0000000000000000000000000000000000000000'
   rollup_type: _
-  wrapped_native_token: '0xB671A1B90CD11Fb9554F6BA8bad1cc13129E3BB2'
+  wrapped_native_token: '0xAfF9b70ea121071Deb9540e3675486b3A465e223'
 contracts:
   amm:
     stableswap:
@@ -38,7 +38,7 @@ contracts:
         contract_github_url: https://github.com/curvefi/curve-lite/blob/6f52fba699d6be12b0a92cf6b0e26e2248067569/contracts/amm/stableswap/factory/factory_v_100.vy
         contract_path: /contracts/amm/stableswap/factory/factory_v_100.vy
         contract_version: 1.0.0
-        deployment_timestamp: 1738937239
+        deployment_timestamp: 1741697112
         deployment_type: normal
       implementation:
         address: '0x9bBc929C45F2C06ccb4acd2C6D9FFE577d505Dfc'
@@ -50,7 +50,7 @@ contracts:
         contract_github_url: https://github.com/curvefi/curve-lite/blob/39693133dc01e53f4c2ba5b1d58aeefb493fe7f7/contracts/amm/stableswap/implementation/implementation_v_700.vy
         contract_path: /contracts/amm/stableswap/implementation/implementation_v_700.vy
         contract_version: 7.0.0
-        deployment_timestamp: 1738937214
+        deployment_timestamp: 1741697097
         deployment_type: blueprint
       math:
         address: '0x3F5A41B922a76759b9C77D36b3d337E88cD1dc5e'
@@ -62,7 +62,7 @@ contracts:
         contract_github_url: https://github.com/curvefi/curve-lite/blob/dd15266111683807cf1ea57f1dfc45c25e61ec3a/contracts/amm/stableswap/math/math_v_100.vy
         contract_path: /contracts/amm/stableswap/math/math_v_100.vy
         contract_version: 1.0.0
-        deployment_timestamp: 1738937191
+        deployment_timestamp: 1741697085
         deployment_type: normal
       meta_implementation:
         address: '0xA626B239e30dF83a228e5D87daB005819267d1BA'
@@ -74,7 +74,7 @@ contracts:
         contract_github_url: https://github.com/curvefi/curve-lite/blob/dd15266111683807cf1ea57f1dfc45c25e61ec3a/contracts/amm/stableswap/meta_implementation/meta_implementation_v_700.vy
         contract_path: /contracts/amm/stableswap/meta_implementation/meta_implementation_v_700.vy
         contract_version: 7.0.0
-        deployment_timestamp: 1738937226
+        deployment_timestamp: 1741697103
         deployment_type: blueprint
       views:
         address: '0xDF264E9a02E0D1C1F0b83AE067dE2Bc0031e1e7a'
@@ -86,7 +86,7 @@ contracts:
         contract_github_url: https://github.com/curvefi/curve-lite/blob/03cd0cecb6cf78ec926310a2fe8976efa607d0e6/contracts/amm/stableswap/views/views_v_120.vy
         contract_path: /contracts/amm/stableswap/views/views_v_120.vy
         contract_version: 1.2.0
-        deployment_timestamp: 1738937203
+        deployment_timestamp: 1741697091
         deployment_type: normal
     tricryptoswap:
       factory:
@@ -99,7 +99,7 @@ contracts:
         contract_github_url: https://github.com/curvefi/curve-lite/blob/6f52fba699d6be12b0a92cf6b0e26e2248067569/contracts/amm/tricryptoswap/factory/factory_v_200.vy
         contract_path: /contracts/amm/tricryptoswap/factory/factory_v_200.vy
         contract_version: 2.0.0
-        deployment_timestamp: 1738937335
+        deployment_timestamp: 1741697161
         deployment_type: normal
       implementation:
         address: '0xF1f6e500d9Ccb9F3477cF078A5ea74F75fC3fc96'
@@ -111,7 +111,7 @@ contracts:
         contract_github_url: https://github.com/curvefi/curve-lite/blob/14022145c05a95650d8379b45e51e72b1860e4e3/contracts/amm/tricryptoswap/implementation/implementation_v_200.vy
         contract_path: /contracts/amm/tricryptoswap/implementation/implementation_v_200.vy
         contract_version: 2.0.0
-        deployment_timestamp: 1738937322
+        deployment_timestamp: 1741697154
         deployment_type: blueprint
       math:
         address: '0xd8eBD128dfa7b97B616fFEb7D9cc5625db3e1445'
@@ -123,7 +123,7 @@ contracts:
         contract_github_url: https://github.com/curvefi/curve-lite/blob/a4cb8201f2c584baec668707a695d35e469ff73b/contracts/amm/tricryptoswap/math/math_v_200.vy
         contract_path: /contracts/amm/tricryptoswap/math/math_v_200.vy
         contract_version: 2.0.0
-        deployment_timestamp: 1738937299
+        deployment_timestamp: 1741697142
         deployment_type: normal
       views:
         address: '0xab53d6899E9c347A5DedDcE3d97D4aeA36B0f8d7'
@@ -135,7 +135,7 @@ contracts:
         contract_github_url: https://github.com/curvefi/curve-lite/blob/a4cb8201f2c584baec668707a695d35e469ff73b/contracts/amm/tricryptoswap/views/views_v_200.vy
         contract_path: /contracts/amm/tricryptoswap/views/views_v_200.vy
         contract_version: 2.0.0
-        deployment_timestamp: 1738937311
+        deployment_timestamp: 1741697148
         deployment_type: normal
     twocryptoswap:
       factory:
@@ -148,7 +148,7 @@ contracts:
         contract_github_url: https://github.com/curvefi/curve-lite/blob/6f52fba699d6be12b0a92cf6b0e26e2248067569/contracts/amm/twocryptoswap/factory/factory_v_200.vy
         contract_path: /contracts/amm/twocryptoswap/factory/factory_v_200.vy
         contract_version: 2.0.0
-        deployment_timestamp: 1738937419
+        deployment_timestamp: 1741697202
         deployment_type: normal
       implementation:
         address: '0xC1a0003b9bFB0C958DA455d12417df0bA79bBA78'
@@ -160,7 +160,7 @@ contracts:
         contract_github_url: https://github.com/curvefi/curve-lite/blob/14022145c05a95650d8379b45e51e72b1860e4e3/contracts/amm/twocryptoswap/implementation/implementation_v_210.vy
         contract_path: /contracts/amm/twocryptoswap/implementation/implementation_v_210.vy
         contract_version: 2.1.0
-        deployment_timestamp: 1738937406
+        deployment_timestamp: 1741697196
         deployment_type: blueprint
       math:
         address: '0xf91E67Ff1ab27d267080e6EA3d8c9CA00D6D6999'
@@ -172,7 +172,7 @@ contracts:
         contract_github_url: https://github.com/curvefi/curve-lite/blob/6a6508e2cc2d40c34187d2db23792633c119c844/contracts/amm/twocryptoswap/math/math_v_210.vy
         contract_path: /contracts/amm/twocryptoswap/math/math_v_210.vy
         contract_version: 2.1.0
-        deployment_timestamp: 1738937383
+        deployment_timestamp: 1741697184
         deployment_type: normal
       views:
         address: '0xE8acB9bDd10E9685361a2D540e60378d26b0223f'
@@ -184,7 +184,7 @@ contracts:
         contract_github_url: https://github.com/curvefi/curve-lite/blob/a4cb8201f2c584baec668707a695d35e469ff73b/contracts/amm/twocryptoswap/views/views_v_200.vy
         contract_path: /contracts/amm/twocryptoswap/views/views_v_200.vy
         contract_version: 2.0.0
-        deployment_timestamp: 1738937395
+        deployment_timestamp: 1741697190
         deployment_type: normal
   gauge:
     child_gauge:
@@ -198,7 +198,7 @@ contracts:
         contract_github_url: https://github.com/curvefi/curve-lite/blob/5bb8237e41dc0776598884c95797a21b2cad9144/contracts/gauge/child_gauge/factory/factory_v_201.vy
         contract_path: /contracts/gauge/child_gauge/factory/factory_v_201.vy
         contract_version: 2.0.1
-        deployment_timestamp: 1738937119
+        deployment_timestamp: 1741697049
         deployment_type: normal
       implementation:
         address: '0x95cB855840342bE0F023A6A7e6f0A9202BFEfE1b'
@@ -210,7 +210,7 @@ contracts:
         contract_github_url: https://github.com/curvefi/curve-lite/blob/17774245dbd4b68a030705206fba3f1998017550/contracts/gauge/child_gauge/implementation/implementation_v_110.vy
         contract_path: /contracts/gauge/child_gauge/implementation/implementation_v_110.vy
         contract_version: 1.1.0
-        deployment_timestamp: 1738937131
+        deployment_timestamp: 1741697055
         deployment_type: normal
   governance: null
   helpers:
@@ -224,7 +224,7 @@ contracts:
       contract_github_url: https://github.com/curvefi/curve-lite/blob/0f3143402f74b3e43f8287e65130b3ce32aa89ac/contracts/helpers/deposit_and_stake_zap/deposit_and_stake_zap_v_100.vy
       contract_path: /contracts/helpers/deposit_and_stake_zap/deposit_and_stake_zap_v_100.vy
       contract_version: 1.0.0
-      deployment_timestamp: 1738937467
+      deployment_timestamp: 1741697226
       deployment_type: normal
     rate_provider:
       address: '0xd05b37dFe4c0377dbCb8030eAD07b41888716fE4'
@@ -236,7 +236,7 @@ contracts:
       contract_github_url: https://github.com/curvefi/curve-lite/blob/30c8dc394ab187934f063ec545da48d5e4ac46db/contracts/helpers/rate_provider/rate_provider_v_101.vy
       contract_path: /contracts/helpers/rate_provider/rate_provider_v_101.vy
       contract_version: 1.0.1
-      deployment_timestamp: 1738937491
+      deployment_timestamp: 1741697238
       deployment_type: normal
     router:
       address: '0xB4c6A1e8A14e9Fe74c88b06275b747145DD41206'
@@ -244,11 +244,11 @@ contracts:
         compiler_version: 0.3.10
         evm_version: paris
         optimisation_level: GAS
-      constructor_args_encoded: 000000000000000000000000b671a1b90cd11fb9554f6ba8bad1cc13129e3bb2
+      constructor_args_encoded: 000000000000000000000000aff9b70ea121071deb9540e3675486b3a465e223
       contract_github_url: https://github.com/curvefi/curve-lite/blob/0f3143402f74b3e43f8287e65130b3ce32aa89ac/contracts/helpers/router/router_v_110.vy
       contract_path: /contracts/helpers/router/router_v_110.vy
       contract_version: 1.1.0
-      deployment_timestamp: 1738937179
+      deployment_timestamp: 1741697079
       deployment_type: normal
     stable_swap_meta_zap:
       address: '0x374D3B496F86416dF0B88830Ad9c59837aA9f078'
@@ -260,7 +260,7 @@ contracts:
       contract_github_url: https://github.com/curvefi/curve-lite/blob/eb1dba99925e42e4f5320b8f032dbd0b24ff28d2/contracts/helpers/stable_swap_meta_zap/stable_swap_meta_zap_v_100.vy
       contract_path: /contracts/helpers/stable_swap_meta_zap/stable_swap_meta_zap_v_100.vy
       contract_version: 1.0.0
-      deployment_timestamp: 1738937479
+      deployment_timestamp: 1741697232
       deployment_type: normal
   registries:
     address_provider:
@@ -273,7 +273,7 @@ contracts:
       contract_github_url: https://github.com/curvefi/curve-lite/blob/6f52fba699d6be12b0a92cf6b0e26e2248067569/contracts/registries/address_provider/address_provider_v_201.vy
       contract_path: /contracts/registries/address_provider/address_provider_v_201.vy
       contract_version: 2.0.1
-      deployment_timestamp: 1738937155
+      deployment_timestamp: 1741697067
       deployment_type: normal
     metaregistry:
       address: '0x907CE289E9Ee0BBcb0F69132B1C28A9Affc29FCA'
@@ -285,7 +285,7 @@ contracts:
       contract_github_url: https://github.com/curvefi/curve-lite/blob/6f52fba699d6be12b0a92cf6b0e26e2248067569/contracts/registries/metaregistry/metaregistry_v_110.vy
       contract_path: /contracts/registries/metaregistry/metaregistry_v_110.vy
       contract_version: 1.1.0
-      deployment_timestamp: 1738937167
+      deployment_timestamp: 1741697073
       deployment_type: normal
       registry_handlers:
         stableswap:
@@ -298,7 +298,7 @@ contracts:
           contract_github_url: https://github.com/curvefi/curve-lite/blob/312513e50c4c7a4a084da44af73ed944e08d37f7/contracts/registries/metaregistry/registry_handlers/stableswap/handler_v_110.vy
           contract_path: /contracts/registries/metaregistry/registry_handlers/stableswap/handler_v_110.vy
           contract_version: 1.1.0
-          deployment_timestamp: 1738937503
+          deployment_timestamp: 1741697244
           deployment_type: normal
         tricryptoswap:
           address: '0x5601C01a18826126A55A6c9b17b379167116C022'
@@ -310,7 +310,7 @@ contracts:
           contract_github_url: https://github.com/curvefi/curve-lite/blob/312513e50c4c7a4a084da44af73ed944e08d37f7/contracts/registries/metaregistry/registry_handlers/tricryptoswap/handler_v_110.vy
           contract_path: /contracts/registries/metaregistry/registry_handlers/tricryptoswap/handler_v_110.vy
           contract_version: 1.1.0
-          deployment_timestamp: 1738937515
+          deployment_timestamp: 1741697250
           deployment_type: normal
         twocryptoswap:
           address: '0x2B4d99723b6e1C107b8e1Fe79ce8CA20eaf31F55'
@@ -322,7 +322,7 @@ contracts:
           contract_github_url: https://github.com/curvefi/curve-lite/blob/312513e50c4c7a4a084da44af73ed944e08d37f7/contracts/registries/metaregistry/registry_handlers/twocryptoswap/handler_v_110.vy
           contract_path: /contracts/registries/metaregistry/registry_handlers/twocryptoswap/handler_v_110.vy
           contract_version: 1.1.0
-          deployment_timestamp: 1738937527
+          deployment_timestamp: 1741697256
           deployment_type: normal
 pools: null
 tokens: null
