--- a/settings/chains/devnet/expchain.yaml
+++ b/settings/chains/devnet/expchain.yaml
@@ -9,15 +9,15 @@ dao:
   ownership_admin: "0x0000000000000000000000000000000000000000"
   parameter_admin: "0x0000000000000000000000000000000000000000"
   vault: "0x0000000000000000000000000000000000000000"
-explorer_base_url: https://blockscout-testnet.expchain.ai/
+explorer_base_url: https://blockscout2-testnet.expchain.ai/
 
 # Frontend-specific inputs
 layer: 1
 logo_url: https://github.com/PolyhedraZK/VisualAsset/blob/main/EXPchain/EXPchain%20Symbol_Black%20on%20White.svg
 native_currency_symbol: tZKJ
 native_currency_coingecko_id: polyhedra-network
-public_rpc_url: https://rpc0-testnet.expchain.ai
-wrapped_native_token: "0xB671A1B90CD11Fb9554F6BA8bad1cc13129E3BB2"
+public_rpc_url: https://rpc2-testnet.expchain.ai/
+wrapped_native_token: "0xAfF9b70ea121071Deb9540e3675486b3A465e223"
 reference_token_addresses:
   usdc: "0x0000000000000000000000000000000000000000"
   usdt: "0x0000000000000000000000000000000000000000"
